--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,6 +53,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=True
 r.VirtualTexturedLightmaps=True
 r.VT.AnisotropicFiltering=True
+r.DefaultFeature.AutoExposure=False
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 -TargetedRHIs=SF_VULKAN_SM5
