Fixed Map Names in the Config files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Lobby.Lobby
-EditorStartupMap=/Game/Maps/Lobby.Lobby
+GameDefaultMap=/Game/Maps/HaFGameStartupMap.GameStartupMap
+EditorStartupMap=/Game/Maps/HaFLobby.HaFLobby
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
