--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -95,8 +95,8 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Maps/Lobby")
-+MapsToCook=(FilePath="/Game/Maps/GameStartupMap")
++MapsToCook=(FilePath="/Game/Maps/HaFLobby")
++MapsToCook=(FilePath="/Game/Maps/HaFGameStartupMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
