Last One for the Night

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/HaFGameStartupMap.GameStartupMap
-EditorStartupMap=/Game/Maps/HaFLobby.HaFLobby
+GameDefaultMap=/Game/Maps/HaFGameStartupMap.HaFGameStartupMap
+EditorStartupMap=/Game/Maps/HaFGameStartupMap.HaFGameStartupMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
