--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -97,6 +97,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/HaFLobby")
 +MapsToCook=(FilePath="/Game/Maps/HaFGameStartupMap")
++MapsToCook=(FilePath="/Game/Maps/HaFBattleMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
