--- a/Blaster.uproject
+++ b/Blaster.uproject
@@ -30,6 +30,10 @@
 			"SupportedTargetPlatforms": [
 				"Win64"
 			]
+		},
+		{
+			"Name": "SkeletalMeshModelingTools",
+			"Enabled": true
 		}
 	]
 }
