Player State in Multiplayer

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/HaFGameStartupMap.HaFGameStartupMap
-EditorStartupMap=/Game/Maps/HaFGameStartupMap.HaFGameStartupMap
+EditorStartupMap=/Game/Maps/HaFBattleMap.HaFBattleMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -168,3 +168,4 @@ NetServerMaxTickRate=60
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +DefaultChannelResponses=(Channel=ECC_SkeletalMesh,Name="SkeletalMesh",DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False)
+
